[package]
name = "traceroute"
version = "0.1.0"
authors = ["Lucas Riutzel <lriutzel@gmail.com>"]
edition = "2024"
keywords = ["network", "traceroute", "icmp"]
categories = ["network-programming"]
description = "Network diagnostic tool to capture route and transit delay of packets."
readme = "README.md"

[lib]
name = "traceroute"
path = "src/lib.rs"

[[bin]]
name = "hollister-traceroute"
path = "src/main.rs"

[dependencies]
log = "0.4.28"
petgraph = "0.8.3"
pnet_macros_support = "0.35"
rand = "0.9.2"
url = "2.5.7"
resolve = "0.2"
structopt = "0.3"
stderrlog = "0.6.0"
console = "0.16.1"

[dependencies.pnet]
version = "0.35"
features = ["std"]

[dependencies.async-std]
version = "1.13.2"
features = ["unstable"]

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
stderrlog = "0.6.0"
